--- a/_data/rub-entenbrust.yml
+++ b/_data/rub-entenbrust.yml
@@ -1,8 +1,9 @@
-portionen: 3-4 Entenbrüste
-gesamtzeitaufwand: 1-2 Minuten
-zeitaufwandzubereitung: 1-2 Minuten
+Rezeptinfo:
+ Portionen: 3-4 Entenbrüste
+ Gesamtzeitaufwand: 1-2 Minuten
+ Zeitaufwandzubereitung: 1-2 Minuten
 
-zutaten:
+Zutaten:
  - s: 2 TL Zucker
  - s: 2 TL Paprikapulver
  - s: 2 TL Knoblauchpulver
@@ -10,5 +11,5 @@ zutaten:
  - s: 1 TL Kreuzkümmel
  - s: 5 EL Öl
 
-zubereitung:
+Zubereitung:
  - s: Alle Zutaten in ein 212ml Einmachlas geben und ordentlich vermengen
