--- a/_data/serbisches-reisfleisch.yml
+++ b/_data/serbisches-reisfleisch.yml
@@ -1,6 +1,8 @@
-portionen: 5
+Rezeptinfo:
+ Portionen: 5
 
-einleitungstext: '    Serbisches Reisfleisch ist ein herzhaftes und k&ouml;stliches Gericht, das seinen Ursprung in der Balkanregion hat. Es ist ein traditionelles Rezept, das &uuml;ber Generationen weitergegeben wurde und heute in vielen Haushalten in
+Artikeltexte:
+ einleitungstext: '    Serbisches Reisfleisch ist ein herzhaftes und k&ouml;stliches Gericht, das seinen Ursprung in der Balkanregion hat. Es ist ein traditionelles Rezept, das &uuml;ber Generationen weitergegeben wurde und heute in vielen Haushalten in
     Serbien und anderen Balkanl&auml;ndern immer noch sehr beliebt ist. Das Gericht besteht aus saftigem Schweinefleisch, Paprika, Tomaten und Gew&uuml;rzen, die mit Reis gekocht werden. Es ist einfach zuzubereiten und perfekt f&uuml;r ein
     Abendessen mit Familie oder Freunden.<br />
     <br />
@@ -13,7 +15,7 @@ einleitungstext: '    Serbisches Reisfleisch ist ein herzhaftes und k&ouml;stlic
     Dieses Rezept ist auch sehr flexibel und kann leicht an den pers&ouml;nlichen Geschmack angepasst werden. Wenn man es sch&auml;rfer mag, kann man einfach mehr Chili hinzuf&uuml;gen. Wer es milder mag, kann die Menge an Paprikapulver
     reduzieren. Au&szlig;erdem kann man das Rezept leicht f&uuml;r eine gr&ouml;&szlig;ere Gruppe verdoppeln oder halbieren, je nach Bedarf. Wenn man also auf der Suche nach einem einfachen, aber k&ouml;stlichen Rezept f&uuml;r das
     n&auml;chste Abendessen ist, dann ist serbisches Reisfleisch eine ausgezeichnete Wahl.'
-zutatentext: '            Die Zutaten in diesem Rezept für Serbisches Reisfleisch spielen eine wichtige Rolle in Bezug auf Geschmack, Textur und Nährwert. Hier sind einige Informationen über die Hauptzutaten:<br />
+ zutatentext: '            Die Zutaten in diesem Rezept für Serbisches Reisfleisch spielen eine wichtige Rolle in Bezug auf Geschmack, Textur und Nährwert. Hier sind einige Informationen über die Hauptzutaten:<br />
             <br />
 
             <i class="fa-regular fa-circle-check"></i> Schweinefleisch: Schweinefleisch ist eine beliebte Fleischsorte in vielen Ländern und wird oft für Eintöpfe und Schmorgerichte verwendet. Es enthält viel Protein und Nährstoffe wie
@@ -35,7 +37,7 @@ zutatentext: '            Die Zutaten in diesem Rezept für Serbisches Reisfleis
             Durch das Verständnis der Zutaten können Sie auch einige Varianten ausprobieren, um das Rezept an Ihren Geschmack anzupassen oder es nahrhafter zu gestalten. Probieren Sie zum Beispiel, das Schweinefleisch durch Hähnchen oder
             Rindfleisch zu ersetzen oder fügen Sie weitere Gemüse hinzu, wie zum Beispiel Karotten oder Zucchini. Sie können auch versuchen, den Langkornreis durch Basmati-Reis oder Quinoa zu ersetzen, um eine zusätzliche Textur und
             Nährstoffe zu erhalten.'
-variationentext: '            Wer gerne experimentiert und seinen kulinarischen Horizont erweitern möchte, kann das serbische Reisfleisch mit einigen Variationen verfeinern.<br />
+ variationentext: '            Wer gerne experimentiert und seinen kulinarischen Horizont erweitern möchte, kann das serbische Reisfleisch mit einigen Variationen verfeinern.<br />
             <br />
 
             <i class="fa-regular fa-circle-check"></i> Eine Möglichkeit ist, anstelle von Schweinefleisch Hühnerfleisch zu verwenden. Dadurch wird das Gericht etwas leichter und bekömmlicher. Alternativ kann man auch Rindfleisch verwenden,
@@ -52,7 +54,7 @@ variationentext: '            Wer gerne experimentiert und seinen kulinarischen 
 
             Mit diesen und vielen anderen Variationen kann man das serbische Reisfleisch immer wieder neu interpretieren und auf seine persönlichen Geschmackspräferenzen abstimmen. Lassen Sie Ihrer Kreativität freien Lauf und genießen Sie
             ein leckeres und individuelles Gericht.'
-serviervorschlaegetext: '            Serbisches Reisfleisch ist ein köstliches und herzhaftes Gericht, das sowohl als Hauptgericht als auch als Beilage serviert werden kann. Hier sind einige Vorschläge, wie Sie dieses Gericht servieren können:<br />
+ serviervorschlaegetext: '            Serbisches Reisfleisch ist ein köstliches und herzhaftes Gericht, das sowohl als Hauptgericht als auch als Beilage serviert werden kann. Hier sind einige Vorschläge, wie Sie dieses Gericht servieren können:<br />
             <br />
 
             <i class="fa-regular fa-circle-check"></i> Mit einem einfachen grünen Salat: Eine großzügige Portion serbisches Reisfleisch auf einem Teller mit einem frischen grünen Salat anrichten. Sie können den Salat mit einer einfachen
@@ -78,7 +80,7 @@ serviervorschlaegetext: '            Serbisches Reisfleisch ist ein köstliches 
             Diese Serviervorschläge sind nur eine Auswahl dessen, was Sie mit diesem vielseitigen Gericht machen können. Experimentieren Sie ein wenig und probieren Sie verschiedene Kombinationen aus, um das perfekte Gericht für Ihre
             Bedürfnisse zu finden.'
 
-zutaten:
+Zutaten:
  - s: 500g Schweinefleisch (Schweinsschnitzel)
  - s: 2 Rindsuppenwürfel
  - s: 2 EL Tomatenmark
@@ -94,7 +96,7 @@ zutaten:
  - s: 300g Langkorn-Reis (1.5 Cups)
  - s: 4 EL Öl
 
-vorbereitung:
+Vorbereitung:
  - s: Die 500g Schweinsschnitzel waschen
  - s: Schweinsschnitzel trocken tupfen
  - s: Schweinsschnitzel in ca. 5mm dicke Streifen schneiden
@@ -110,7 +112,7 @@ vorbereitung:
  - s: 1 EL Paprikapulver in die Schüssel mit dem Thymian,... geben
  - s: Den Inhalt der Schüssel mit dem Thymian,... ordentlich vermischen
 
-zubereitung:
+Zubereitung:
  - s: 4 EL Öl in einen Kochtopf geben
  - s: Kochfeld auf Maximale Leistung stellen
  - s: Den Inhalt der Schüssel mit den Zwiebelwürfel,... in den Kochtopf geben und goldgelb rösten
