--- a/_data/pizzateig.yml
+++ b/_data/pizzateig.yml
@@ -1,9 +1,11 @@
-portionen: 3 Pizzen
-gesamtzeitaufwand: 18 Stunden, 12 Minuten
-zeitaufwandvorbereitung: 18 Stunden
-zeitaufwandzubereitung: 12 Minuten
+Rezeptinfo:
+ Portionen: 3 Pizzen
+ Gesamtzeitaufwand: 18 Stunden, 12 Minuten
+ Zeitaufwandvorbereitung: 18 Stunden
+ Zeitaufwandzubereitung: 12 Minuten
 
-einleitungstext: '    Pizza gehört zu den Lieblingsgerichten vieler Menschen und ist eine Speise, die man zu jeder Tageszeit genießen kann. Der Teig ist das Herzstück jeder Pizza, und wer einmal selbstgemachten Pizzateig probiert hat, möchte nie wieder auf
+Artikeltexte:
+ einleitungstext: '    Pizza gehört zu den Lieblingsgerichten vieler Menschen und ist eine Speise, die man zu jeder Tageszeit genießen kann. Der Teig ist das Herzstück jeder Pizza, und wer einmal selbstgemachten Pizzateig probiert hat, möchte nie wieder auf
     Fertigteig zurückgreifen. Das Rezept für einen Pizzateig ohne Kneten ist einfach und unkompliziert, und man benötigt nur wenige Zutaten. Mit einer Vorbereitungszeit von 12-18 Stunden kann man sich am nächsten Tag auf eine köstliche und
     selbstgemachte Pizza freuen.<br />
     <br />
@@ -15,7 +17,7 @@ einleitungstext: '    Pizza gehört zu den Lieblingsgerichten vieler Menschen un
 
     Nachdem der Teig ausgeruht hat, teilt man ihn in drei Teile und knetet sie vorsichtig zu Kugeln. Anschließend lässt man die Teiglinge nochmals 30 Minuten ruhen, bevor man sie ausrollt und mit den gewünschten Zutaten belegt. Die Pizza
     wird dann bei 220 Grad Umluft für etwa 10 Minuten im Ofen gebacken. Das Ergebnis ist eine köstliche und knusprige Pizza, die man ganz nach Belieben mit verschiedenen Zutaten garnieren kann.'
-zutatentext: '            Die Zutaten sind das Herzstück jedes Rezepts und haben einen großen Einfluss auf den Geschmack und die Konsistenz des Gerichts. Auch bei einem einfachen Rezept wie einem Pizzateig ohne Kneten sind die Zutaten entscheidend für
+ zutatentext: '            Die Zutaten sind das Herzstück jedes Rezepts und haben einen großen Einfluss auf den Geschmack und die Konsistenz des Gerichts. Auch bei einem einfachen Rezept wie einem Pizzateig ohne Kneten sind die Zutaten entscheidend für
             das Endergebnis. In diesem Text werden die einzelnen Zutaten näher betrachtet und ihre Funktion im Teig erläutert.<br />
             <br />
 
@@ -33,14 +35,14 @@ zutatentext: '            Die Zutaten sind das Herzstück jedes Rezepts und habe
 
             Zusammen ergeben diese Zutaten einen Teig, der luftig, aromatisch und knusprig ist. Mit der richtigen Kombination der Zutaten kann man eine perfekte Pizza zaubern, die den Gaumen verwöhnt.'    
 
-zutaten:
+Zutaten:
  - s: 3.5 Cups (~500g) Mehl
  - s: 1/4 TL Trockenhefe
  - s: 2 TL Salz
  - s: 1 1/3 Cups (~298g) Wasser (Raumtemperatur)
  - s: 2 EL Öl
 
-vorbereitung:
+Vorbereitung:
  - s: 1 1/3 Cups (~298g) Wasser (Raumtemperatur) in ein Gefäß geben
  - s: 2 EL Öl in das Gefäß mit dem lauwarmen Wasser geben
  - s: 3.5 Cups (~500g) Mehl in eine große Rührschüssel geben
@@ -52,7 +54,7 @@ vorbereitung:
  - s: Den Teig in einen Behälter geben und diesen mit Frischhaltefolie luftdicht verschliessen
  - s: Den Teig 12-18 Stunden an einen lauwarmen/külhlen Ort ruhen lassen
 
-zubereitung:
+Zubereitung:
  - s: Nach 12-18 Stunden Hände und Arbeitsfläche bemehlen und den Teig auf die Arbeitsfläche geben
  - s: Den Teig in 3 Teile teilen
  - s: Die Teiglinge vorsichtig zu einer Kugel kneten
